--- a/src/style.module.css
+++ b/src/style.module.css
@@ -2,6 +2,9 @@
     margin: 0px;
     
 }
+body{
+    overflow-x: hidden;
+}
 .container{
     display: flex;
     justify-content: center;
@@ -19,21 +22,103 @@
     display: flex;
     flex-wrap: wrap;
 }
-.containerMovies {
-    text-align: center;
+.containerBlock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 250px;
+    height: 400px;
+}
+.description{
+    position: relative;
+    width: 300px;
+    height: 373px;
+    margin-top: -3px;
+    margin-left: 215px;
+    background-color: rgba(0, 0, 0, 0.894);
+    position:absolute;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 5px;
+    border: 3px solid black;
+    box-shadow: 0px 0px 10px black;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 2;
+    transition: 1s ease-in;
+    overflow: hidden;
+}
+.description h1{
+    width: 200px;
+    margin-top: 0px;
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 50px;
+}
+.description .p {
+    width: 200px;
+    height: 200px;
+    font-size: 12px;
+    line-height: 25px;
+    background-color: transparent;
+}
+.containerMovies {
+    position: relative;
+    text-align: center;
+    width: 200px;
+    background-color: black;
     border: 3px solid black;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     cursor: pointer;
     box-shadow: 0px 0px 20px black;
-    margin: 10px;
+    margin: 15px;
+    z-index: 1;
+}
+.containerMovies:hover {
+    width: 260px;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+    border-left: 0px;
+    border: 3px solid #0b0647;
+    z-index: 3;
+}
+.containerMovies:hover .description{
+    display: flex;
+    animation: show 0.5s linear;
+    border: 3px solid #0b0647;
+    border-left: 0px;
+}
+
+@keyframes show {
+    0% {width: 0px;}
+    100% {width: 300px;}
 }
 
 .containerMovies .img {
-    width: 250px;
+    width: inherit;
 }
 .containerMovies p {
-    background-color: white;
-    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    color: white;
+}
+
+.circle{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border:  10px solid rgba(0, 0, 255, 0.104);
+    border-top: 10px solid blue;
+    border-left: 10px solid blue;
+    animation: spin 0.5s linear infinite;
+}
+
+@keyframes spin {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
 }
